Fix some spacing issues

--- a/app/scripts/components/info-panel/styles/main.sass
+++ b/app/scripts/components/info-panel/styles/main.sass
@@ -17,3 +17,6 @@
 
   p
     margin-bottom: 0
+
+    &:last-of-type
+      margin-bottom: 0.8em
