--- a/app/scripts/components/management-panel/styles/main.sass
+++ b/app/scripts/components/management-panel/styles/main.sass
@@ -1,1 +1,6 @@
 .management-panel-view
+
+  .row
+
+    &:last-of-type
+      margin-bottom: 0
